[tool.poetry]
name = "pycubelut"
version = "0.2.2"
description = "Tool for Applying Adobe Cube LUTs to Images"
authors = ["Yoonsik Park <park.yoonsik@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yoonsikp/pycubelut"
keywords = [
    "cube",
    "lut",
    "cubelut",
    "3d",
    "python"
]

[tool.poetry.dependencies]
python = "^3.5"
colour-science = "^0.3.14"
scipy = "^1.4.1"
pillow = "^6.2.1"
numpy = "1.17.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cubelut = 'pycubelut:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

